force-app/main/default/objects/Project_Milestone__c/Project_Milestone__c.object-meta.xml
<CustomObject>
    <description>Project Milestone</description>
    <label>Project Milestone</label>
    <nameField>
        <displayFormat>PM-{00000}</displayFormat>
        <label>Project Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Milestone</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>