force-app/main/default/objects/Project_Milestone__c/fields/Deliverables_mapped_to_the_objective__c.field-meta.xml
<CustomField>
    <fullName>Deliverables_mapped_to_the_objective__c</fullName>
    <description>Deliverables mapped to the objective</description>
    <inlineHelpText>Deliverables mapped to the objective</inlineHelpText>
    <label>Deliverables mapped to the objective</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>