force-app/main/default/objects/Project_Milestone__c/fields/Location_Expected_to_Deliver_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Location_Expected_to_Deliver_Milestone__c</fullName>
    <description>Location expected to deliver the milestone/outcome</description>
    <inlineHelpText>Location expected to deliver the milestone/outcome</inlineHelpText>
    <label>Location Expected to Deliver Milestone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>