force-app/main/default/objects/Project_Milestone__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <description>Milestone</description>
    <inlineHelpText>Milestone</inlineHelpText>
    <label>Milestone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>