force-app/main/default/objects/Project_Milestone__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Project Milestone</relationshipLabel>
    <relationshipName>Project_Milestone</relationshipName>
    <type>Lookup</type>
</CustomField>