force-app/main/default/objects/Project_Milestone__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date</description>
    <inlineHelpText>Start Date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>